renamed templates section

--- a/ckanext/odm_laws/templates/laws/edit.html
+++ b/ckanext/odm_laws/templates/laws/edit.html
@@ -1,4 +1,4 @@
-{% extends 'library/edit_base.html' %}
+{% extends 'laws/edit_base.html' %}
 
 {% block primary_content_inner %}
   {% block form %}
