--- a/ckanext/odm_laws/templates/snippets/package_item.html
+++ b/ckanext/odm_laws/templates/snippets/package_item.html
@@ -42,9 +42,9 @@ Example:
               {% endif %}
             {% endblock %}
             {% block heading_title %}
-             {% if package.type == h.odm_library_get_dataset_type() %}
+             {% if package.type == h.odm_laws_get_dataset_type() %}
               <i class="fa fa-book icon icon-book glyphicon glyphicon-book"></i>
-              {{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='ckanext.odm_library.controller:LibraryController', type='library_record', action='read', id=package.name)) }}
+              {{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='ckanext.odm_laws.controller:LawsController', type='laws_record', action='read', id=package.name)) }}
              {% else %}
               <i class="fa fa-sitemap icon icon-sitemap glyphicon glyphicon-sitemap"></i>
               {{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='package', action='read', id=package.name)) }}
@@ -86,8 +86,8 @@ Example:
               {% block resources_inner %}
                 {% for resource in h.dict_list_reduce(package.resources, 'format') %}
                 <li>
-                 {% if package.type == h.odm_library_get_dataset_type() %}
-                  <a href="{{ h.url_for(controller='ckanext.odm_library.controller:LibraryController', type='library_record', action='read', id=package.name) }}" class="label" data-format="{{ resource.lower() }}">{{ resource }}</a>
+                 {% if package.type == h.odm_laws_get_dataset_type() %}
+                  <a href="{{ h.url_for(controller='ckanext.odm_laws.controller:LawsController', type='laws_record', action='read', id=package.name) }}" class="label" data-format="{{ resource.lower() }}">{{ resource }}</a>
                  {% else %}
                   <a href="{{ h.url_for(controller='package', action='read', id=package.name) }}" class="label" data-format="{{ resource.lower() }}">{{ resource }}</a>
                  {% endif %}
