--- a/ckanext/odm_laws/templates/header.html
+++ b/ckanext/odm_laws/templates/header.html
@@ -6,13 +6,13 @@
    ('search', _('All records')),
    ('organizations_index', _('Organizations')),
    ('group_index', _('Records by type')),
-   ('odm_library_index', _('Library'))
+   ('odm_laws_index', _('Laws'))
    ) }}
  {% else %}
   {{ h.build_nav_main(
    ('search', _('All records')),
    ('group_index', _('Records by type')),
-   ('odm_library_index', _('Library'))
+   ('odm_laws_index', _('Laws'))
    ) }}
  {% endif %}
 {% endblock %}
