--- a/ckanext/odm_laws/templates/laws/base_form_page.html
+++ b/ckanext/odm_laws/templates/laws/base_form_page.html
@@ -1,4 +1,4 @@
-{% extends "library/edit_base.html" %}
+{% extends "laws/edit_base.html" %}
 
 {% block primary_content %}
   <section class="module">
@@ -19,11 +19,11 @@
 {% block secondary_content %}
   {% block info_module %}
     <section class="module module-narrow module-shallow">
-      <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What are Library records?') }}</h2>
+      <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What are Laws records?') }}</h2>
       <div class="module-content">
         <p>
           {% trans %}
-          Library records provide all the bibliographical information or metadata needed to help users find the documents most appropriate to their needs. Certain fields on this form are mandatory. Your library record cannot be uploaded without providing information in those fields. Please provide as much information as possible, even when fields are not mandatory. If you need more guidance on how to do this please see <a href="https://wiki.opendevelopmentmekong.net/metadata" target="_blank">WIKI</a>. Once you have completed the form, plse check to make sure it is accurate and complete. Your recommended library item will be made available to the public once your library record has been vetted.
+          Laws records provide all the bibliographical information or metadata needed to help users find the documents most appropriate to their needs. Certain fields on this form are mandatory. Your library record cannot be uploaded without providing information in those fields. Please provide as much information as possible, even when fields are not mandatory. If you need more guidance on how to do this please see <a href="https://wiki.opendevelopmentmekong.net/metadata" target="_blank">WIKI</a>. Once you have completed the form, plse check to make sure it is accurate and complete. Your recommended library item will be made available to the public once your library record has been vetted.
           {% endtrans %}
         </p>
       </div>
