--- a/ckanext/odm_laws/templates/laws/snippets/laws_metadata_fields.html
+++ b/ckanext/odm_laws/templates/laws/snippets/laws_metadata_fields.html
@@ -2,7 +2,7 @@
 
 <div class="control-group">
 
-<!--  {% block package_basic_fields_document_type %}
+ {% block package_basic_fields_document_type %}
   <div class="control-group control-full">
     {% set error = errors.document_type %}
     <label class="control-label" for="field-document_type">{{ _("Document type") }}</label>
@@ -17,16 +17,21 @@
   </div>
 
 
- {% endblock %} -->
+ {% endblock %}
 
-<!-- Formal title of the law or policy: -->
-<!-- {% block package_basic_fields_title %}
-  {{ form.input('title', id='field-title', label=_('Title'), placeholder=_('Formal title of the law or policy'), value=data.title, error=errors.title, classes=['control-full', 'control-large'], attrs={'data-module': 'slug-preview-target'}) }}
-{% endblock %} -->
+ 
+
  {%block package_metadata_fields_odm_laws_short_title%}
-   {{ form.input('odm_laws_short_title', is_required=true, label=_('Short title'), id='field-short-title', placeholder=_('commonly used label, e.g. Cambodia Labor Law'), value=data.odm_laws_short_title, error=errors.shortTitle, classes=['control-full']) }}
+   {{ form.input('odm_laws_short_title', is_required=true, label=_('Alternative/Short Title'), id='field-short-title', placeholder=_('commonly used label, e.g. Cambodia Labor Law'), value=data.odm_laws_short_title, error=errors.shortTitle, classes=['control-full']) }}
  {% endblock %}
  
- 
+ {%block package_metadata_fields_odm_laws_number%}
+  {{ form.input('odm_laws_number', is_required=false, label=_('Legal document#'), id='field-odm_laws_number', placeholder=_(''), value=data.odm_laws_number, error=errors.lawsNumber, classes=['control-full']) }}
+ {%endblock%}
+
+
+
+
+   
 
  </div>
