--- a/ckanext/odm_laws/templates/header.html
+++ b/ckanext/odm_laws/templates/header.html
@@ -1,20 +1,28 @@
 {% ckan_extends %}
 
-{% block header_site_navigation_tabs %}
- {% if c.userobj %}
-  {{ h.build_nav_main(
-   ('search', _('All records')),
-   ('organizations_index', _('Organizations')),
-   ('group_index', _('Records by type')),
-   ('odm_library_index', _('Library')),
-   ('odm_laws_index', _('Laws'))
-   ) }}
- {% else %}
-  {{ h.build_nav_main(
-   ('search', _('All records')),
-   ('group_index', _('Records by type')),
-   ('odm_library_index', _('Library')),
-   ('odm_laws_index', _('Laws'))
-   ) }}
- {% endif %}
-{% endblock %}
+{% block header_site_navigation %}
+   <nav class="section navigation">
+    <ul class="nav nav-pills">
+
+      {% block header_site_navigation_tabs %}
+        {% if c.userobj %}
+         {{ h.build_nav_main(
+          ('search', _('All records')),
+          ('organizations_index', _('Organizations')),
+          ('group_index', _('Records by type')),
+          ('odm_library_index', _('Library')),
+          ('odm_laws_index', _('Laws'))
+          ) }}
+        {% else %}
+         {{ h.build_nav_main(
+          ('search', _('All records')),
+          ('group_index', _('Records by type')),
+          ('odm_library_index', _('Library')),
+          ('odm_laws_index', _('Laws'))
+          ) }}
+        {% endif %}
+      {% endblock %}
+
+     </ul>
+    </nav>
+    {% endblock %}
