--- a/ckanext/odm_laws/templates/laws/snippets/laws_metadata_fields.html
+++ b/ckanext/odm_laws/templates/laws/snippets/laws_metadata_fields.html
@@ -146,7 +146,8 @@
       <div class="control-group">
         <label class="control-label" for="field-odm_laws_relationship_target">{{ _("Relationship Target") }}</label>
         <div class="controls control-full">
-          <select multiple id="field-odm_laws_relationship_target" name="odm_laws_relationship_target" data-module="autocomplete" placeholder="{{ _("e.g. Law on ....") }}">
+          <select id="field-odm_laws_relationship_target" name="odm_laws_relationship_target" data-module="autocomplete" placeholder="{{ _("e.g. Law on ....") }}">
+            <option disabled selected> {{ _("-- select a new relationship target --") }} </option>
             {% for dataset in h.odm_laws_lookup_relationship_target() %}
 
               <option value="{{ dataset }}">{{ dataset }}</option>
