--- a/ckanext/odm_laws/templates/laws/edit.html
+++ b/ckanext/odm_laws/templates/laws/edit.html
@@ -2,9 +2,30 @@
 
 {% block primary_content_inner %}
   {% block form %}
+    <h2>Parent documents</h2>
+    <p>
+      <!-- get all parents with the current dataset as the subject  -->
+      {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %}
+        <ul>
+          <!-- display related document -->
+          <li>{{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)}}</li>
+        </ul>
+      {% endfor %}
+    </p>
+
+    <h2>Child documents</h2>
+    <p>
+
+      {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %}
+        <ul>
+          <li>{{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)}}</li>
+        </ul>
+      {% endfor %}
+    </p>
   {#- passing c to a snippet is bad but is required here
       for backwards compatibility with old templates and
       plugins using setup_template_variables() -#}
   {{- h.snippet(form_snippet, c=c, **form_vars) -}}
+
   {% endblock %}
 {% endblock %}
