--- a/ckanext/odm_laws/templates/laws/snippets/laws_metadata_fields.html
+++ b/ckanext/odm_laws/templates/laws/snippets/laws_metadata_fields.html
@@ -126,7 +126,12 @@
   {% endblock %}
 
 
+
   {% block package_metadata_fields_odm_laws_relationship_type %}
+        <!-- View relationships -->
+        
+
+        <!-- Add new relationship -->
         <div class="control-group">
           <label for="field-odm_laws_relationship_type" class="control-label">{{ _('Add Relationship to other Document') }}</label>
           <div class="controls">
