--- a/ckanext/odm_laws/templates/laws/edit.html
+++ b/ckanext/odm_laws/templates/laws/edit.html
@@ -5,11 +5,19 @@
     <h2>Parent documents</h2>
     <p>
       <!-- get all parents with the current dataset as the subject  -->
+
       {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %}
-        <ul>
-          <!-- display related document -->
-          <li>{{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)}}</li>
-        </ul>
+        {%set dataset_id=entry.__extras.object_package_id%}
+          <ul>
+            <!-- display related document -->
+            <li>
+              <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
+                {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
+
+              </a>
+
+            </li>
+          </ul>
       {% endfor %}
     </p>
 
@@ -17,11 +25,18 @@
     <p>
 
       {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %}
-        <ul>
-          <li>{{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)}}</li>
-        </ul>
+        {%set dataset_id=entry.__extras.subject_package_id%}
+          <ul>
+            <li>
+              <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
+                {{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name']}}
+              </a>
+            </li>
+          </ul>
       {% endfor %}
     </p>
+
+    <hr>
   {#- passing c to a snippet is bad but is required here
       for backwards compatibility with old templates and
       plugins using setup_template_variables() -#}
