moved related dataset logic to snippet and included into dataset page

--- a/ckanext/odm_laws/templates/laws/read.html
+++ b/ckanext/odm_laws/templates/laws/read.html
@@ -49,4 +49,5 @@
     {% snippet "laws/snippets/additional_info_laws.html", pkg_dict=pkg %}
   {% endblock %}
 
+  {% snippet 'laws/snippets/related_datasets.html' %}
 {% endblock %}
