--- a/ckanext/odm_laws/templates/laws/edit.html
+++ b/ckanext/odm_laws/templates/laws/edit.html
@@ -2,41 +2,7 @@
 
 {% block primary_content_inner %}
   {% block form %}
-    <h2>Parent documents</h2>
-    <p>
-      <!-- get all parents with the current dataset as the subject  -->
-
-      {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='subject') %}
-        {%set dataset_id=entry.__extras.object_package_id%}
-          <ul>
-            <!-- display related document -->
-            <li>
-              <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-                {{h.odm_laws_get_dataset_name(entry.__extras.object_package_id)[0]['name']}}
-
-              </a>
-
-            </li>
-          </ul>
-      {% endfor %}
-    </p>
-
-    <h2>Child documents</h2>
-    <p>
-
-      {% for entry in h.odm_laws_semre_of_database_relationships(c=c,viewpoint='object') %}
-        {%set dataset_id=entry.__extras.subject_package_id%}
-          <ul>
-            <li>
-              <a href="{{h.url_for(controller='package',action='read',id=dataset_id)}}" target="_blank">
-                {{h.odm_laws_get_dataset_name(entry.__extras.subject_package_id)[0]['name']}}
-              </a>
-            </li>
-          </ul>
-      {% endfor %}
-    </p>
-
-    <hr>
+  {% snippet 'laws/snippets/related_datasets.html' %}
   {#- passing c to a snippet is bad but is required here
       for backwards compatibility with old templates and
       plugins using setup_template_variables() -#}
